===========
Changes Log
===========

2.0.1 (2010-mm-dd)
------------------
* tinyTiM is forward-compatible to TMAPI 2.0.3
* OSGi bundle exports the .voc package 
  (contributed by Hannes Niederhausen)
* Removed String-Interning for object ids 
  (caused heap memory problems and fixes a bug reported by Uta Schulze)
  


2.0.0 (2010-03-19)
------------------
* Updated TMAPI to 2.0.2 (kept compatibility to 2.0 and 2.0.1)
* Fixed LocatorImpl (the impl. of "equals" was different 
  from the TMAPI 2.0 specs) reported by Uta Schulze
* tinyTiM is usable as an OSGi bundle
* Added support to convert XTM 1.0 class-instance relationships
  to TMDM type-instance relationships
* Added support to convert XTM 1.0 PSIs to TMDM PSIs
* Moved to Ontopia's Compact(Hash|Identity)Set instead relying 
  on Java's default implementations
* Removed support for trove's collections

Bugfixes:
---------
* Bug #2926983 -- Merging of associations fails
                  reported by Sven Krosse



2.0.0 a5 (23.07.2009)
---------------------

* Updated to TMAPI 2.0a2
* Updated TMCL constants (implemented by Hannes Niederhausen)

Bugfixes:
---------
* Bug #2812460 -- Port the Check class from Ontopia back to tinyTiM
* Bug #2809821 -- Ensure same topic map constraint
* Bug #2561306 -- Move TinyTimMapInputHandler to the core
* Bug #2824834 -- Reifier at duplicate construct fails
* Bug #2824837 -- Same iid at a duplicate statement does not work



2.0.0 a4 (06.12.2008)
---------------------

Bugfixes:
---------
* Bug #2315558 -- Decimal values like "9.3" are not accepted
* Bug #2353673 -- Locator.resolve returns new Locator objects 
                  even if they have been created before



2.0.0 a3 (14.11.2008)
---------------------
* Moved to Apache License 2.0
* Internal code refactoring
* Added more tests

Bugfixes:
---------
* Bug #2269551 -- Topic types are not considered as dependency
* Bug #2221024 -- Merging topic maps causes an autom. generated topic iid



2.0.0 a2 (08.09.2008)